# tinymesh

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  voice.md
docs/: sparse-aggregation.md
experiments/: csr_aggregation.py  sparse_aggregation.py
src/tinymesh/: __init__.py
tests/: test_csr_aggregation.py  test_package.py  test_sparse_aggregation.py
