[project]
name = "tinymesh"
version = "0.1.0"
description = "Tinygrad-native learning over sparse structures through space and time"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "tinygrad @ git+https://github.com/tinygrad/tinygrad.git@f7ce7f330d14b0527d7952c0d4de03e6e9b4585e",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
