[project]
name = "tinymesh"
version = "0.1.0"
description = "Tinygrad-native learning over sparse structures through space and time"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "tinygrad @ git+https://github.com/tinygrad/tinygrad.git@980748ccfc4e3900ac652d8451e2ead9bfb4d09a",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
